# pika-consumer

./: .gitignore  README.md  README.rst  Vagrantfile  requirements.txt  setup.cfg
example_pika_consumer_implementation/: example_consumer.py
pika_consumer/: __init__.py
playbooks/: main.yml
playbooks/roles/example-pika-consumer/defaults/: main.yml
playbooks/roles/example-pika-consumer/tasks/: main.yml
playbooks/roles/example-pika-consumer/templates/: example-pika-consumer.service
playbooks/roles/pyenv/tasks/: main.yml
