[metadata]
name = Pika Consumer
author = Brandon Schlueter
author-email = pika-consumer@schlueter.blue
summary = A pika consumer class which may be used to create rabbitmq queue consumers
description-file = README.md
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = pika_consumer
